tests/ui/query-system/query-cycle-printing-issue-151358.rs
//~ ERROR: cycle detected when looking up span for `Default`
trait Default {}
use std::num::NonZero;
fn main() {
    NonZero();
    format!("{}", 0);
}
